layed out foundation for frontend and the visual aspect of text to speech website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Text to Speech</h1>
+        <h1>Text to <span>Speech</span></h1>
+        <textarea placeholder="Write anythin g here"></textarea>
+        <div class="row">
+            <select>
+            </select>
+            <button>
+                Listen
+            </button>
+        </div>
     </div>
 </body>
 </html>
