--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <div class="hero">
         <h1>Text to <span>Speech</span></h1>
-        <textarea placeholder="Write anythin g here"></textarea>
+        <textarea placeholder="Write anything here"></textarea>
         <div class="row">
             <select>
             </select>
             <button>
+                <img src="images 2/play.png">
                 Listen
             </button>
         </div>
     </div>
 </body>
-</html>
+</html> 
