Frontend complete, need to implement backend for actually converting text to speech

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 <body>
     <div class="hero">
         <h1>Text to <span>Speech</span></h1>
-        <textarea placeholder="Write anything here"></textarea>
+        <textarea placeholder="Type..."></textarea>
         <div class="row">
-            <select>
-            </select>
-            <button>
-                <img src="images 2/play.png">
-                Listen
-            </button>
+            <select></select>
+            <button><img src="images/play.png"> Listen</button>
         </div>
     </div>
 </body>
